--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
         </div>
       </section>
-      <section class="about fadeIn up" id="sec-01">
+      <section class="about fadeIn up">
         <div class="wrapper">
           <div class="flex-container">
             <div class="flex-left fade-item">
@@ -105,7 +105,7 @@
           </div>
         </div>
       </section>
-      <section class="works" id="sec-02">
+      <section class="works">
         <div class="main-title">
           <h2 class="main-title-en bold"><span class="text-blue">W</span>orks</h2>
           <p class="main-title-ja bold">私の作品</p>
